--- a/framework/sass/theme-llc.scss
+++ b/framework/sass/theme-llc.scss
@@ -67,6 +67,14 @@ h3 {
 		margin-top: 0;
 	}
 }
+h4 {
+	margin-bottom: 6px;
+	letter-spacing: 0;
+
+	+ pre {
+		margin-top: 6px;
+	}
+}
 
 a {
 	color: $gray;
@@ -77,8 +85,12 @@ a {
 	}
 }
 
-pre code {
-	overflow-y: auto;
+pre {
+	margin: 8px 0;
+
+	code {
+		overflow-y: auto;
+	}
 }
 code {
 	font-family: Monaco, Andale Mono, monospace;
@@ -152,7 +164,6 @@ footer {
 }
 
 
-
 /* vertical align heading */
 .slide.title {
 	transform-style: preserve-3d;
@@ -199,8 +210,9 @@ textarea.snippet {
 	font-size: 14px;
 	padding: 2px 7px;
 	position: relative;
-	bottom: -33px;
-	right: 8px;
+	bottom: -10px;
+	right: 8px; 
+	margin-bottom: -25px;
 }
 
 
@@ -222,6 +234,10 @@ table {
 
 	p {
 		margin: 10px 0;
+	}
+
+	&:last-child {
+		margin-bottom: 50px;
 	}
 }
 
