--- a/framework/sass/theme-llc.scss
+++ b/framework/sass/theme-llc.scss
@@ -256,7 +256,7 @@ table {
 	background: linear-gradient(rgba($black, 0.1),rgba($black, 0.8)), url(../img/banner-home.jpg) no-repeat;
 	background-size: cover;
 	color: $white;
-	position: relative;
+	// position: relative;
 
 	.logo {
 		height: 65px;
