--- a/framework/css/theme-llc.css
+++ b/framework/css/theme-llc.css
@@ -120,6 +120,11 @@ footer {
     .slide.centered img {
       width: 60%; }
 
+.side-by-side img {
+  width: 49%;
+  display: inline-block;
+  vertical-align: top; }
+
 /* vertical align heading */
 .slide.title {
   transform-style: preserve-3d;
@@ -221,6 +226,40 @@ table img {
       font-size: 3rem;
       text-transform: lowercase;
       font-weight: 400; }
+
+/* Last/ Instructor info slide
+-------------------------------*/
+.last .title {
+  color: white;
+  margin-top: 40px; }
+.last ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  font-size: 2.2rem; }
+.last .fa {
+  padding-right: 10px; }
+.last .title-bg {
+  background: rgba(177, 9, 170, 0.8);
+  border-radius: 5px;
+  padding: 0 10px 0 6px; }
+.last .instructor-img {
+  border-radius: 50%;
+  width: 100px;
+  float: left;
+  margin-right: 20px; }
+.last h3 {
+  margin-bottom: 20px; }
+  .last h3 span {
+    color: #b109aa;
+    font-family: "Pacifico", cursive;
+    margin-right: 4px;
+    font-size: 3rem;
+    text-transform: lowercase;
+    font-weight: 400; }
+.last .attribution {
+  position: absolute;
+  bottom: 20px; }
 
 /* highlight.js customizations
 -------------------------------*/
