--- a/framework/sass/theme-llc.scss
+++ b/framework/sass/theme-llc.scss
@@ -163,6 +163,13 @@ footer {
 	}
 }
 
+.side-by-side {
+	img {
+		width: 49%;
+		display: inline-block;
+		vertical-align: top;
+	}
+}
 
 /* vertical align heading */
 .slide.title {
@@ -301,6 +308,48 @@ table {
 			text-transform: lowercase;
 			font-weight: $normal;
 		}
+	}
+}
+
+/* Last/ Instructor info slide
+-------------------------------*/
+.last {
+	.title {
+		color: $white;
+		margin-top: 40px;
+	}
+	ul {
+		@include list-reset();
+		font-size: 2.2rem;
+	}
+	.fa {
+		padding-right: 10px;
+	}
+	.title-bg {
+		background: rgba($llc-pink, 0.8);
+		border-radius: 5px;
+		padding: 0 10px 0 6px;
+	}
+	.instructor-img {
+		border-radius: 50%;
+		width: 100px;
+		float: left;
+		margin-right: 20px;
+	}
+	h3 {
+		margin-bottom: 20px;
+		span {
+			color: $llc-pink;
+			font-family: $cursive;
+			margin-right: 4px;
+			font-size: 3rem;
+			text-transform: lowercase;
+			font-weight: $normal;
+		}
+	}
+	.attribution {
+		position: absolute;
+		bottom: 20px;
 	}
 }
 
