--- a/project/css/styles.css
+++ b/project/css/styles.css
@@ -1,6 +1,8 @@
 /*---------------------------------------
-Template created by Ladies Learning Code 
+Template created by Christina Truong
+for Ladies Learning Code 
 http://ladieslearningcode.com
+http://christinatruong.com
 -----------------------------------------*/
 
 
