--- a/framework/sass/_theme.scss
+++ b/framework/sass/_theme.scss
@@ -92,6 +92,12 @@ ul, ol {
     width: 90%;
     margin: 5px 0 20px;
   }
+  
+  .list-sm & {
+    font-size: $font-size-sm;
+    
+    li { margin-bottom: 4px; }
+  }
 }
 
 ol > li {
@@ -221,9 +227,10 @@ td {
 
 // Helper classes and content styles
 .note,
+.small-type .note,
 .resources,
 .resources + * {
-  line-height: 1.25;
+  line-height: 1.3;
   font-size: $font-size-xsm;
 }
 .resources,
@@ -258,7 +265,12 @@ a.highlight {
     color: red;
   }
 }
-
+.small-type {
+  p, ul, ol {
+    font-size: $font-size-sm;
+    line-height: 1.3;
+  }
+}
 
 [class^="col-"],
 [class*="col-"]{
@@ -289,6 +301,9 @@ a.highlight {
   padding: 45px 64px;
   background-size: cover;
   height: 100%;
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
   
   // Adds extra space to the bottom of the slides to allow 
   // presenters to scroll the page up so people in the back
@@ -398,10 +413,8 @@ textarea.snippet {
 /* Creates border for slide examples */
 .example,
 blockquote {
-  border: 1px solid $gray-light;
   padding: 0 15px;
-  font-size: $font-size-sm;
-  margin: 20px 0;
+  font-size: $font-size-xsm;
   
   p {
     margin: 10px 0;
@@ -410,11 +423,14 @@ blockquote {
     margin-bottom: 50px;
   }
 }
+.example {
+  border: 1px solid $gray-light;
+  margin: 20px 0;
+}
 blockquote {
   margin: 25px 0 20px;
-  font-size: $font-size-sm;
   background: #fff;
-  border: 4px solid rgba(177, 9, 170, 0.2)
+  border: 3px solid rgba(177, 9, 170, 0.2)
 }
 
 /* Incremental slides */
@@ -517,7 +533,7 @@ e.g.
     color: $white;
   }
   h1 {
-    margin-bottom: 95px;
+    margin-bottom: 10px;
   }
   a {
     color: white;
