--- a/project/css/final.css
+++ b/project/css/final.css
@@ -13,46 +13,35 @@ http://christinatruong.com
   box-sizing: border-box;
 }
 
-/* Fixes the clearing of floats on child elements - 
-This class should be added to the parent element to 
-force clear the floats of the child elements */
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-html {
-  font-size: 62.5%; /* sets base font size to be equal to 10px */
-}
 body {
   font-family: "Merriweather", serif;
   line-height: 1.5;
-  font-size: 16px;
-  background: url(../images/background-4.jpg) no-repeat fixed;
-  background-position: 50%;
+  background: url(../images/background-4.jpg) no-repeat fixed 50%;
   background-size: cover;
   padding: 0;
   margin: 0;
 }
 
-h1 {
-  font-family: "Pacifico", Georgia, cursive;
-  /*font-size: 80px;*/
-  font-size: 8rem;
-  font-weight: 400;
-  margin: 0;
-}
-h2, h3, h4 {
+h1, h2, h3, h4 {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   margin: 0;
 }
-h2, h3 {
+section h1, 
+header h2 {
   text-transform: uppercase;
 }
-h2 {
-  /*font-size: 32px;*/
-  font-size: 3.2rem;
+header h1 {
+  font-family: "Pacifico", Georgia, cursive;
+  font-size: 80px;
+}
+header h2,
+section h1 {
+  font-size: 32px;
+}
+section h1 {
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 20px;
 }
 
 /* every other section element, 
@@ -62,10 +51,7 @@ section:nth-child(2n+1) {
 }
 section:nth-child(2n+2) {
   color: #fff;
-}
-section h2 {
-  border-bottom: 1px solid #ccc;
-  margin-bottom: 20px;
+  background: rgba(0, 0, 0, 0.8);
 }
 
 a {
@@ -84,11 +70,11 @@ ul li {
 }
 
 .content-wrap {
-  width: 1000px;
-  max-width: 1000px;
   width: 80%;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 90px 0; 
+  overflow: auto;
 }
 
 
@@ -102,11 +88,7 @@ header {
 
 /* ABOUT ME / PROFILE
 ----------------------*/
-.profile {
-  background: rgba(0, 0, 0, 0.8);
-  color: #fff;
-}
-.profile h2 {
+.profile h1 {
   background: #2C808C;
   display: inline-block;
   padding: 10px 20px;
@@ -178,37 +160,12 @@ header {
   color: #2C808C;
 }
 
-
-/* SKILLS
-----------*/
-.skills {
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../images/background-4.jpg) no-repeat fixed 50%/cover;
-  font-size: 20px;
-}
-.skills h3 {
-  margin-bottom: 10px;
-  color: #2C808C;
-  font-size: 2rem;
-}
-.skills i {
-  color: #2C808C;
-}
-
-.skills-list .columns {
-  margin-top: 20px;
-  width: 33.33%;
-  float: left;
-}
-.skills-list ul {
-  list-style-type: none;
-  padding: 0;
-  font-size: 1.6rem;
-}
-
-
 /* EDUCATION
 -------------*/
-.education h4 {
+.education h2 {
+  text-transform: uppercase;
+}
+.education h3 {
   color: #2C808C;
 }
 
@@ -245,50 +202,49 @@ footer {
 /* MEDIA QUERIES
 --------------------*/
 @media (max-width: 800px) {
-  .content-wrap {
-    padding: 60px 0;
+  /* this is here just for testing */
+  body {
+    /*color: blue;*/
   }
-
-  header {
-    padding-top: 150px;
-    padding-bottom: 150px;
-  }
+  /* About section */
   .profile-image {
     width: 48%;
     float: right;
     margin: 0 0 15px 2%;
   }
   .profile .summary {
-    width: auto;
-    float: none;
+    width: auto; /* resets the width setting */
+    /* or could also use width: 50% - if you don't want the text to wrap */
+    float: none; /* removes the float */
   }
-
   .work-experience .details {
-    float: none;
+    float: none; /* removed float */
     width: 100%; /* auto will work as well */
     padding-right: 0px; /* don't need padding anymore now that it spans across the page */
   }
   .work-experience .description {
     width: 100%;
-    float: none;
+    float: none; /* removed float */
   }
 }
-
 @media (max-width: 600px) {
-  html {
-    font-size: 40%;
+  header {
+    padding: 75px 40px;
+  } 
+  header h1 {
+    font-size: 45px;
   }
-  .skills-list .columns {
-    float: none;
-    width: 100%;
+  header h2,
+  section h1 {
+    font-size: 24px;
   }
-  .skills-list ul {
-    font-size: 2.4rem;
+  .education h2 {
+    font-size: 18px;
   }
   .contact .social {
-   width: 100%; 
-   float: left; 
-   text-align: left; 
-   margin-bottom: 20px;
+    width: 100%; 
+    float: left; 
+    text-align: left; 
+    margin-bottom: 20px;
   }
 }
