--- a/project/css/styles.css
+++ b/project/css/styles.css
@@ -1,8 +1,6 @@
 /*---------------------------------------
-Template created by Christina Truong
-for Ladies Learning Code 
+Template created by Ladies Learning Code 
 http://ladieslearningcode.com
-http://christinatruong.com
 -----------------------------------------*/
 
 
@@ -13,42 +11,35 @@ http://christinatruong.com
   box-sizing: border-box;
 }
 
-/* Fixes the clearing of floats on child elements - 
-This class should be added to the parent element to 
-force clear the floats of the child elements */
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
 body {
   font-family: "Merriweather", serif;
-  font-size: 16px;
   line-height: 1.5;
-  background: url(../images/background-4.jpg) no-repeat fixed;
-  background-position: 50%;
+  background: url(../images/background-4.jpg) no-repeat fixed 50%;
   background-size: cover;
   padding: 0;
   margin: 0;
 }
 
-h1 {
-  font-family: "Pacifico", Georgia, cursive;
-  font-size: 80px;
-  font-weight: 400;
-  margin: 0;
-}
-h2, h3, h4 {
+h1, h2, h3, h4 {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   margin: 0;
 }
-h2, h3 {
+section h1, 
+header h2 {
   text-transform: uppercase;
 }
-h2 {
+header h1 {
+  font-family: "Pacifico", Georgia, cursive;
+  font-size: 80px;
+}
+header h2,
+section h1 {
   font-size: 32px;
+}
+section h1 {
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 20px;
 }
 
 /* every other section element, 
@@ -58,10 +49,7 @@ section:nth-child(2n+1) {
 }
 section:nth-child(2n+2) {
   color: #fff;
-}
-section h2 {
-  border-bottom: 1px solid #ccc;
-  margin-bottom: 20px;
+  background: rgba(0, 0, 0, 0.8);
 }
 
 a {
@@ -78,10 +66,12 @@ ul {
 ul li {
   margin-bottom: 5px;
 }
+
 .content-wrap {
   width: 1000px;
   margin: 0 auto;
   padding: 90px 0; 
+  overflow: auto;
 }
 
 
@@ -95,11 +85,7 @@ header {
 
 /* ABOUT ME / PROFILE
 ----------------------*/
-.profile {
-  background: rgba(0, 0, 0, 0.8);
-  color: #fff;
-}
-.profile h2 {
+.profile h1 {
   background: #2C808C;
   display: inline-block;
   padding: 10px 20px;
@@ -171,35 +157,12 @@ header {
   color: #2C808C;
 }
 
-
-/* SKILLS
-----------*/
-.skills {
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../images/background-4.jpg) no-repeat fixed 50%/cover;
-  font-size: 20px;
-}
-.skills h3 {
-  margin-bottom: 10px;
-  color: #2C808C;
-}
-.skills i {
-  color: #2C808C;
-}
-
-.skills-list .columns {
-  margin-top: 20px;
-  width: 33.33%;
-  float: left;
-}
-.skills-list ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-
 /* EDUCATION
 -------------*/
-.education h4 {
+.education h2 {
+  text-transform: uppercase;
+}
+.education h3 {
   color: #2C808C;
 }
 
@@ -235,3 +198,5 @@ footer {
 
 /* MEDIA QUERIES
 --------------------*/
+
+
