--- a/framework/sass/_theme.scss
+++ b/framework/sass/_theme.scss
@@ -10,6 +10,13 @@
 *, *:before, *:after {
   box-sizing: border-box;
 }
+html {
+  font-size: 62.5%;
+  
+  @media (min-width: 1401px) {
+    font-size: 70%;
+  }
+}
 body {
   padding: 0;
   margin: 0;
@@ -21,9 +28,12 @@ body {
   -webkit-font-smoothing: antialiased;
   background: #ecf0f1;
 }
-h2 {
-  margin: 0;
+
+strong {
+  font-weight: 700;
+  color: black;
 }
+
 h1 {
   font-family: $heading-font;
   letter-spacing: -0.05em;
@@ -38,13 +48,13 @@ h1 {
   }
   code {
     font-size: inherit;
-    font-weight: normal;
-    background: none;
-    text-transform: lowercase;
+    color: inherit;
+    font-family: inherit;
+    background: transparent;
   }
 }
-h2 {
-  font-size: $font-size-heading-sm;
+h2, h3 {
+  margin: 0;
   
   + p,
   + ul,
@@ -52,69 +62,36 @@ h2 {
     margin-top: 6px;
   }
 }
-h3, h4 {
-  margin: 32px 0 10px;
-  
-  + p, + pre {
-    margin-top: 4px;
-  }
+h2 {
+  font-size: $font-size-heading-sm;
 }
-h5 {
-  margin-bottom: 10px;
+h3 {
+  font-size: $font-size-heading-sm * .9;
 }
-h6 {
-  text-transform: none;
-  margin: 5px 0;
-}
+
 a {
-  color: $llc-pink;
-  text-decoration: none;
   outline: none;
+  color: inherit;
 
   &:hover {
-    color: $gray;
+    color: $llc-pink;
+    text-decoration: none;
   }
 }
+
 hr {
   border: none;
   border-top: 1px solid $gray-light;
   clear: both;
-}
-ul, ol {
-  padding: 0;
-    
-  li {
-    margin-bottom: 6px;
-    margin-left: 24px;
-  }
-  ol, ul {
-    font-size: $font-size-sm;
-    width: 90%;
-    margin: 5px 0 20px;
-  }
+  margin: 30px 0 0;
+  display: inline-block;
+  width: 100%;
   
-  .list-sm & {
-    font-size: $font-size-sm;
-    
-    li { margin-bottom: 4px; }
+  + p {
+    margin-top: 16px;
   }
 }
 
-ol > li {
-  margin-bottom: 15px;
-  margin-left: 40px;
-}
-ul {
-  list-style-type: none;
-  
-  li:before {
-    content: "\203A"; // › symbol
-    font-family: $quicksand;
-    font-weight: bold;
-    margin-left: -18px;
-    padding-right: 10px;
-  }
-}
 p {
   margin-bottom: 0;
   
@@ -122,76 +99,96 @@ p {
     margin-top: 30px;
   }
 }
-.cursive {
-  font-family: $cursive;
-  color: $llc-pink;
+
+iframe {
+  margin-top: 15px;
 }
+
+
+// List styles
+//----------------
+ol, ul {
+  > li {
+    margin-bottom: 6px;
+  }
+  ol, ul {
+    margin-top: 6px;
+    font-size: $font-size-sm;
+  }
+}
+ul {
+  padding: 0;
+    
+  > li {
+    margin-left: 24px;
+    list-style-type: none;
+    
+    &:before {
+      content: "\203A"; // › symbol
+      font-family: $quicksand;
+      font-weight: bold;
+      margin-left: -19px;
+      padding-right: 10px;
+    }
+  }
+}
+p + ul,
+p + ol {
+  margin-top: 20px;
+}
+
+.nested-list {
+  > ul {
+    margin-left: -24px;
+    
+    > li:before {
+      content: "";
+      margin-left: -10px;
+    }
+    ol, ul {
+      width: 90%;
+      margin-bottom: 25px;
+    }
+  }
+  .resources + ul {
+    > li {
+      margin-left: 35px;
+      
+      &:before {
+        content: "\203A";
+      }
+    }
+  }
+}
+
 .two-col-list > {
   ul, ol {
     overflow: hidden;
-    padding-left: 8px;
     
     > li {
-      width: 50%;
+      width: 45%;
       float: left;
-      margin-left: 0;
+      margin-left: 4px;
       
+      &:first-child {
+        margin-right: 5%;
+      }
       &:before {
         content: "";
+        margin-left: -12px;
       }
-    }
-    ul, ol {
-      margin-top: 10px;
     }
   }
   .resources + ul {
     > li {
       width: 100%;
-      margin-left: 20px;
+      margin-left: 12px;
       
       &:before {
         content: "\203A";
-        padding-right: 8px;
       }
     }
   }
-}
-.no-bullet-list {
-  > ul > li {
-    margin-left: 0;
-    
-    &:before {
-      content: "";
-      margin-left: -9px;
-    }
-    ul {
-      margin-left: 15px; 
-    }
-  }
-}
-
-iframe {
-  margin-bottom: 20px;
-}
-pre {
-  margin: 8px 0 30px;
-  white-space: pre-wrap;
-
-  code {
-    overflow-y: auto;
-  }
-}
-code {
-  font-family: Monaco, Andale Mono, monospace;
-  color: #444;
-  font-size: $font-size-code;
-  background: white;
-  border-radius: 4px;
-  padding: 3px 6px;
-}
-
-strong {
-  font-weight: 700;
 }
 
 table {
@@ -208,18 +205,19 @@ table {
     border: none;
     background: transparent;
   }
+	img {
+		width: 100%; 
+	}
 }
 th, td {
   border: 1px solid $gray-light;
-  padding-left: 10px;
+  padding: 10px;
 }
 th {
   text-align: left;
+  font-weight: normal;
 }
-td {
-  padding-right: 60px;
-  padding-left: 10px;
-  
+td {  
   .two-col-table & {
     width: 50%;
   }
@@ -231,12 +229,24 @@ td {
 .resources,
 .resources + * {
   line-height: 1.3;
-  font-size: $font-size-xsm;
+  font-size: $font-size-xsm!important;
+  
+  code {
+    font-size: inherit;
+  }
 }
 .resources,
 .resources + * {
   margin-top: 2px;
 }
+.resources {
+  margin-bottom: 5px;
+  
+  + ul li {
+    margin-bottom: 0;
+  }
+}
+
 .left {
   float: left; 
   
@@ -244,6 +254,15 @@ td {
     padding-left: 10px;
   }
 }
+img.left,
+iframe.left {
+  margin-right: 30px;
+}
+img.right,
+iframe.right {
+  margin-left: 30px;
+}
+
 .right {
   float: right;
 }
@@ -257,13 +276,15 @@ td {
     display: block;
   }
 }
-.highlight,
+.cursive {
+  font-family: $cursive;
+  color: $llc-pink;
+}
+.highlight em,
 a.highlight {
-  color: red;
-
-  a {
-    color: red;
-  }
+  color: $llc-pink;
+  font-size: 106%;
+  padding-right: 2px;
 }
 .small-type {
   p, ul, ol {
@@ -279,7 +300,7 @@ a.highlight {
   
   &:last-child {
     margin-right: 0;
-  } 
+  }
 }
 .col-2 {
   width: 48%;
@@ -295,6 +316,8 @@ a.highlight {
 }
 
 
+
+
 /* Base styles for slides
 --------------------------*/
 .slide {
@@ -302,7 +325,7 @@ a.highlight {
   background-size: cover;
   height: 100%;
   width: 100%;
-  max-width: 1400px;
+  max-width: 1600px;
   margin: 0 auto;
   
   // Adds extra space to the bottom of the slides to allow 
@@ -315,14 +338,6 @@ a.highlight {
   }
   img {
     max-width: 100%;
-  }
-  &:target {
-    /* overflow: auto; */
-  }
-  &.js-fiddle > iframe:only-of-type {
-    position: static;
-    width: 525px;
-    height: 350px;
   }
   &.centered {
     text-align: center;
@@ -339,6 +354,17 @@ a.highlight {
   }
 }
 
+//slide number
+#indicator {
+  top: 15px;
+  right: 20px;
+  font-size: 20px;
+  text-shadow: none;
+  color: $llc-pink;
+  background: white;
+  padding: 2px 8px;
+}
+
 /* For two column screenshots */
 .side-by-side {
   img {
@@ -353,6 +379,7 @@ a.highlight {
   transform-style: preserve-3d;
   padding-left: 8%;
   padding-right: 8%;
+  background: $gray-dark;
 
   h1, h2 {
     position: relative;
@@ -365,10 +392,10 @@ a.highlight {
     line-height: 1.1;
   }
   h2 {
-    color: $gray;
+    color: $white;
+    letter-spacing: 0.05rem;
     font-size: $font-size-heading;
     font-family: "Quicksand",sans-serif;
-    letter-spacing: -0.05em;
     text-transform: uppercase;
   }
 }
@@ -382,53 +409,61 @@ a.highlight {
   &:before {
     content: "";
   }
-  .end {
-
-  }
 }
 
 /* textarea for dynamic CSS demos */
 .edit {
   float: left;
   background: #FFEFD5;
+  border-right: 1px solid darken(#FFEFD5, 20);
+  border-bottom: 1px solid darken(#FFEFD5, 20);
   font-size: 11px;
   padding: 6px 14px;
   position: relative;
-  bottom: -19px;
+  bottom: -20px;
   left: 1px;
   margin-bottom: -25px;
   text-transform: uppercase;
+  font-weight: bold;
+}
+p {
+  textarea.snippet {
+    margin-top: -15px;
+    margin-bottom: -10px;
+  }
+  .edit {
+    margin-top: -34px;
+  }
 }
 textarea.snippet {
   width: 100%;
   border: 1px solid #222;
   padding: 35px 12px 12px;;
-  margin-top: 15px;
-  font-size: $font-size-code!important;
+  margin: 15px 0;
+  font-size: 20px!important;
   font-family: Andale Mono, Monaco, monospace;
   line-height: 1.4;
+  
+  + .example {
+    margin-top: 0;
+  }
 }
-
 
 /* Creates border for slide examples */
 .example,
 blockquote {
-  padding: 0 15px;
-  font-size: $font-size-xsm;
+  font-size: $font-size-sm;
+  margin: 15px 0;
   
   p {
-    margin: 10px 0;
-  }
-  &:last-child {
-    margin-bottom: 50px;
+    margin: 10px;
   }
 }
 .example {
   border: 1px solid $gray-light;
-  margin: 20px 0;
+  padding: 5px 10px;
 }
 blockquote {
-  margin: 25px 0 20px;
   background: #fff;
   border: 3px solid rgba(177, 9, 170, 0.2)
 }
@@ -444,8 +479,10 @@ Background color style for headings
 Use spans wrap inside of a heading for div. 
 e.g.
 <h1 class="title-bg">
-  <span>Welcome to </span><br>
-  <span>Ladies Learning Code!</span>
+  <span>
+    Welcome to<br>
+    Ladies Learning Code!
+  </span>
 </h1>
 */
 .heading-bg {
@@ -471,9 +508,16 @@ e.g.
   &.slide {
     padding: 0;
   }
-  h1, 
+  .logo-stacked {
+    margin-right: 50px;
+  }
+  h1,
   .instructions {
     padding: 30px 64px;
+  }
+  .instructions p {
+    margin: 0;
+    line-height: 1.32;
   }
   h1 {
     background: #111;
@@ -481,23 +525,33 @@ e.g.
     margin: 0;
     font-size: 55px;
   }
-  .logo-stacked {
-    margin: 0px 105px 0 -20px;
-  }
   h2 {
-    font-size: 26px;
     float: left;
-  } 
-  .instructions > ul {
-    margin: 0 0 0 235px;
+    color: black;
+    width: 21%;
+    font-family: $quicksand;
+    color: $llc-pink;
+    text-transform: uppercase;
+    font-size: 30px;
   }
-  ul.connected li {
-    margin-bottom: 0;
-  }
-  ul.downloads > li {
-    margin-bottom: 20px;
+  ol, ul {
+    float: left;
+    width: 79%;
+    margin: 0;
+    
+    ul, ol {
+      float: none;
+      width: 100%;
+    }
+    &.connected li:before {
+      content: "";
+    }
+    &.downloads > li {
+      margin-bottom: 15px;
+    }
   }
 }
+
 /* Instructor Info */
 .slide.intro, 
 .slide.last {
@@ -511,7 +565,7 @@ e.g.
     font-size: $font-size-heading;
   }
   .instructor {
-    border-radius: 5px;
+    border-radius: 50%;
     max-width: 225px;
     float: left;
     margin-right: 30px;
@@ -599,7 +653,7 @@ footer {
   font-size: $font-size-sm;
   
   li {
-    margin-bottom: 0;
+    margin-bottom: 2px;
   }
   a {
     color: $gray-dark;
@@ -610,10 +664,61 @@ footer {
   }
 }
 
-/* highlight.js customizations
--------------------------------*/
+
+/* code blocks
+-----------------------------*/
+pre {
+  margin: 18px 0 12px;
+  white-space: pre-wrap;
+
+  code {
+    overflow-y: auto;
+    font-size: $font-size-xsm;
+    // font-family: Andale Mono, Monaco, monospace;
+  }
+  + pre {
+    margin-top: 15px;
+  }
+  + h2 {
+    margin-top: 25px;
+  }
+  + hr {
+    margin-top: 35px;
+  }
+}
+code {
+  color: #555;
+  padding: 0 8px;
+  display: inline-block;
+  background: white;
+  font-size: $font-size-base * 1.1;
+  border-radius: 4px;
+  position: relative;
+  top: -2px;
+}
+/* Targets only firefox */
+@-moz-document url-prefix() {
+  code {
+    font-size: $font-size-base - 0.2;
+  }
+}
+
+//code samples
+.highlighted-tags strong {
+  background: #ddd;
+  padding: 5px;
+  color: black;
+  display: inline-block;
+  font-weight: bold;
+
+  [class^="hljs-"]{
+    color: black;
+    font-weight: bold;
+  }
+}
+
+/* highlight.js customizations */
 .hljs {
-  font-family: Andale Mono, Monaco, monospace;
   padding: 12px;
   border-radius: 2px;
   border: 1px solid $gray-light;
@@ -622,6 +727,9 @@ footer {
 .hljs-doctype,
 .hljs-comment {
   color: #990;
+}
+.php .hljs-preprocessor {
+  color: green;
 }
 
 
